// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadTermsAndConditions should render checked if terms and conditions accepted 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-obfw65-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-18d7y9d-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
        data-analyticsid="terms-and-conditions-input"
        data-indeterminate="false"
        data-testid="terms-and-conditions-input"
        id="terms-and-conditions-input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CheckBoxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1qz58uz-MuiTypography-root"
    />
  </label>
</div>
`;

exports[`Component FileUploadTermsAndConditions should render default view 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-obfw65-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-18d7y9d-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
        data-analyticsid="terms-and-conditions-input"
        data-indeterminate="false"
        data-testid="terms-and-conditions-input"
        id="terms-and-conditions-input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CheckBoxOutlineBlankIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-hpta27-MuiTypography-root"
    />
  </label>
</div>
`;
